# ai_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/robo_claw/: app.py
agents/search_agent/: app.py
ai_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/common_utils/: chat_manager.py  clean_tool_output.py  console.py  memory.py  memory_utils.py  spinner.py
common/config/: agent.md  memory.jsonl  memory.md  soul.md
common/core/: agent_logic.py  pre_process.py
common/interfaces/: cli.py  streamlit.py  whatsapp.py
common/llm_config/: local_llama_cpp.py  prompt.py
common/tools/: memory_tool.py
robo_claw/: README.md  app.py  config.sh  whatsapp_agent.py
robo_claw/config/: agent.md  memory.md  soul.md  user.md
robo_claw/core/: agent_logic.py
robo_claw/interfaces/: cli.py  whatsapp.py
robo_claw/llm_config/: local_llama_cpp.py  prompt.py
robo_claw/robo_utils/: chat_manager.py  clean_tool_output.py
robo_claw/tools/: memory_tool.py  search_duckduckgo.py  search_tavily.py  terminal_tool.py
search_agent/: README.md  app.py  requirements.txt
search_agent/.streamlit/: config.toml
search_agent/config/: agent.md  memory.md  soul.md  user.md
search_agent/llm_config/: local_llm.py  online_llm.py  prompt.py
search_agent/tools/: search_duckduckgo.py
