[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents"
version = "0.1.0"
description = "Monorepo for AI Agents"
requires-python = ">=3.10"

# Only the main libs you import in your code
dependencies = [
    "openai",
    "langchain",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-community",
    "langchain-experimental",
    "langgraph",
    "streamlit",
    "python-dotenv",
    "pandas",
    "duckduckgo-search",
    "ddgs",
    "langchain_tavily",
    "tavily-python",
    "ollama",
    "google-genai",
    "rich",
    "neonize",
    "aiohttp",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "agents*"]
